adjust modal and add form

--- a/careers.html
+++ b/careers.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/pages/careers.css">
+  <link rel="stylesheet" href="lib/scrollbar.css">
   <link rel="stylesheet" href="lib/splide/dist/css/splide.min.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-grid.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-grid.min.css">
@@ -479,51 +480,131 @@
   </div>
 </footer>
 
-<!--<div class="modal-window justify-content-center align-items-center">-->
-<!--  <div class="content l thick-bordered d-flex flex-column align-items-center p-4">-->
-<!--    <svg class="modal-close" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-<!--      <rect width="40" height="40" rx="20" fill="#478BF9"/>-->
-<!--      <g clip-path="url(#clip0_506_8776)">-->
-<!--        <path fill-rule="evenodd" clip-rule="evenodd" d="M19.9996 22.1206L25.3026 27.4246C25.584 27.706 25.9657 27.8641 26.3636 27.8641C26.7616 27.8641 27.1432 27.706 27.4246 27.4246C27.706 27.1432 27.8641 26.7616 27.8641 26.3636C27.8641 25.9657 27.706 25.584 27.4246 25.3026L22.1196 19.9996L27.4236 14.6966C27.5629 14.5573 27.6733 14.3919 27.7487 14.2099C27.824 14.0278 27.8628 13.8328 27.8627 13.6358C27.8627 13.4388 27.8238 13.2437 27.7484 13.0617C27.673 12.8797 27.5624 12.7144 27.4231 12.5751C27.2838 12.4359 27.1184 12.3254 26.9364 12.2501C26.7543 12.1747 26.5592 12.1359 26.3623 12.136C26.1653 12.136 25.9702 12.1749 25.7882 12.2503C25.6062 12.3258 25.4409 12.4363 25.3016 12.5756L19.9996 17.8786L14.6966 12.5756C14.5583 12.4323 14.3928 12.3179 14.2099 12.2392C14.0269 12.1605 13.8301 12.1191 13.6309 12.1173C13.4318 12.1154 13.2342 12.1533 13.0498 12.2286C12.8655 12.304 12.6979 12.4153 12.557 12.556C12.4161 12.6968 12.3047 12.8642 12.2292 13.0485C12.1536 13.2328 12.1156 13.4303 12.1172 13.6295C12.1189 13.8287 12.1602 14.0255 12.2387 14.2086C12.3172 14.3916 12.4314 14.5572 12.5746 14.6956L17.8796 19.9996L12.5756 25.3026C12.2942 25.584 12.1361 25.9657 12.1361 26.3636C12.1361 26.7616 12.2942 27.1432 12.5756 27.4246C12.857 27.706 13.2387 27.8641 13.6366 27.8641C14.0346 27.8641 14.4162 27.706 14.6976 27.4246L19.9996 22.1196V22.1206Z" fill="white"/>-->
-<!--      </g>-->
-<!--      <defs>-->
-<!--        <clipPath id="clip0_506_8776">-->
-<!--          <rect width="24" height="24" fill="white" transform="translate(8 8)"/>-->
-<!--        </clipPath>-->
-<!--      </defs>-->
-<!--    </svg>-->
-<!--    <h4 class="text-center">PPC Specialist Mobile App</h4>-->
-<!--    <div class="info"></div>-->
-<!--    <div class="description my-3">-->
-<!--      <p>Develop a strategy for measuring all campaign activities, including creating and maintaining automated reporting dashboards and fulfilling ad-hoc marketing team reporting requests;-->
-<!--        Tracking marketing campaigns through all communication channels on an ongoing basis;-->
-<!--        Regularly reporting on KPIs of the marketing department and preparing reports;-->
-<!--        Providing insights and strategic recommendations to help create best-in-class marketing experiences across B2B & B2C activities;-->
-<!--        Analysis of external and internal business environment: competitors, market trends, marketing, sales funnel conversions, etc.-->
-<!--      </p>-->
-<!--      <p>Develop a strategy for measuring all campaign activities, including creating and maintaining automated reporting dashboards and fulfilling ad-hoc marketing team reporting requests;-->
-<!--        Tracking marketing campaigns through all communication channels on an ongoing basis;-->
-<!--        Regularly reporting on KPIs of the marketing department and preparing reports;-->
-<!--        Providing insights and strategic recommendations to help create best-in-class marketing experiences across B2B & B2C activities;-->
-<!--        Analysis of external and internal business environment: competitors, market trends, marketing, sales funnel conversions, etc.-->
-<!--      </p>-->
-<!--      <p>Develop a strategy for measuring all campaign activities, including creating and maintaining automated reporting dashboards and fulfilling ad-hoc marketing team reporting requests;-->
-<!--        Tracking marketing campaigns through all communication channels on an ongoing basis;-->
-<!--        Regularly reporting on KPIs of the marketing department and preparing reports;-->
-<!--        Providing insights and strategic recommendations to help create best-in-class marketing experiences across B2B & B2C activities;-->
-<!--        Analysis of external and internal business environment: competitors, market trends, marketing, sales funnel conversions, etc.-->
-<!--      </p>-->
-<!--    </div>-->
-<!--    <div class="actions d-flex w-100">-->
-<!--      <button class="btn me-3">-->
-<!--        <svg width="28" height="14" viewBox="0 0 28 14" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-<!--          <path d="M3.27799 6.17301C3.65133 4.21301 5.49133 2.86634 7.49133 2.86634H11.398C12.0913 2.86634 12.6647 2.29301 12.6647 1.59967C12.6647 0.906341 12.0913 0.333008 11.398 0.333008H7.62466C4.14466 0.333008 1.03799 2.87967 0.704659 6.34634C0.612475 7.27198 0.71522 8.20666 1.00627 9.09017C1.29733 9.97368 1.77023 10.7864 2.39453 11.476C3.01882 12.1656 3.78065 12.7168 4.63094 13.0941C5.48122 13.4713 6.40111 13.6663 7.33133 13.6663H11.398C12.0913 13.6663 12.6647 13.093 12.6647 12.3997C12.6647 11.7063 12.0913 11.133 11.398 11.133H7.33133C6.71889 11.1311 6.11447 10.9936 5.56151 10.7303C5.00855 10.467 4.52077 10.0845 4.13323 9.61031C3.74569 9.13608 3.468 8.58189 3.32013 7.98757C3.17225 7.39325 3.15786 6.77355 3.27799 6.17301ZM9.99799 8.33301H17.998C18.7313 8.33301 19.3313 7.73301 19.3313 6.99967C19.3313 6.26634 18.7313 5.66634 17.998 5.66634H9.99799C9.26466 5.66634 8.66466 6.26634 8.66466 6.99967C8.66466 7.73301 9.26466 8.33301 9.99799 8.33301ZM20.3713 0.333008H16.598C15.9047 0.333008 15.3313 0.906341 15.3313 1.59967C15.3313 2.29301 15.9047 2.86634 16.598 2.86634H20.5047C22.5047 2.86634 24.3447 4.21301 24.718 6.17301C24.8381 6.77355 24.8237 7.39325 24.6759 7.98757C24.528 8.58189 24.2503 9.13608 23.8628 9.61031C23.4752 10.0845 22.9874 10.467 22.4345 10.7303C21.8815 10.9936 21.2771 11.1311 20.6647 11.133H16.598C15.9047 11.133 15.3313 11.7063 15.3313 12.3997C15.3313 13.093 15.9047 13.6663 16.598 13.6663H20.6647C24.558 13.6663 27.678 10.3197 27.3047 6.34634C26.9713 2.87967 23.8513 0.333008 20.3713 0.333008Z" fill="#478BF9"/>-->
-<!--        </svg>-->
-<!--      </button>-->
-<!--      <button class="cta-btn flex-grow-1">Apply this position</button>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
+<div class="modal-window justify-content-center align-items-center">
+  <form class="form d-flex flex-column align-items-center d-none thick-bordered p-4 w-100">
+    <svg class="modal-close" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <rect width="40" height="40" rx="20" fill="#478BF9"/>
+      <g clip-path="url(#clip0_506_8776)">
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M19.9996 22.1206L25.3026 27.4246C25.584 27.706 25.9657 27.8641 26.3636 27.8641C26.7616 27.8641 27.1432 27.706 27.4246 27.4246C27.706 27.1432 27.8641 26.7616 27.8641 26.3636C27.8641 25.9657 27.706 25.584 27.4246 25.3026L22.1196 19.9996L27.4236 14.6966C27.5629 14.5573 27.6733 14.3919 27.7487 14.2099C27.824 14.0278 27.8628 13.8328 27.8627 13.6358C27.8627 13.4388 27.8238 13.2437 27.7484 13.0617C27.673 12.8797 27.5624 12.7144 27.4231 12.5751C27.2838 12.4359 27.1184 12.3254 26.9364 12.2501C26.7543 12.1747 26.5592 12.1359 26.3623 12.136C26.1653 12.136 25.9702 12.1749 25.7882 12.2503C25.6062 12.3258 25.4409 12.4363 25.3016 12.5756L19.9996 17.8786L14.6966 12.5756C14.5583 12.4323 14.3928 12.3179 14.2099 12.2392C14.0269 12.1605 13.8301 12.1191 13.6309 12.1173C13.4318 12.1154 13.2342 12.1533 13.0498 12.2286C12.8655 12.304 12.6979 12.4153 12.557 12.556C12.4161 12.6968 12.3047 12.8642 12.2292 13.0485C12.1536 13.2328 12.1156 13.4303 12.1172 13.6295C12.1189 13.8287 12.1602 14.0255 12.2387 14.2086C12.3172 14.3916 12.4314 14.5572 12.5746 14.6956L17.8796 19.9996L12.5756 25.3026C12.2942 25.584 12.1361 25.9657 12.1361 26.3636C12.1361 26.7616 12.2942 27.1432 12.5756 27.4246C12.857 27.706 13.2387 27.8641 13.6366 27.8641C14.0346 27.8641 14.4162 27.706 14.6976 27.4246L19.9996 22.1196V22.1206Z" fill="white"/>
+      </g>
+      <defs>
+        <clipPath id="clip0_506_8776">
+          <rect width="24" height="24" fill="white" transform="translate(8 8)"/>
+        </clipPath>
+      </defs>
+    </svg>
+    <h3 class="text-center mb-4">Fill out the form</h3>
+    <div class="w-100">
+      <ul class="d-flex flex-column ">
+          <li>
+            <div class="input">
+              <input placeholder="Your name..." type="text">
+              <span>Name:</span>
+              <div class="error-text"></div>
+            </div>
+          </li>
+          <li class="mt-4">
+            <div class="input">
+              <input placeholder="Your email..." type="email">
+              <span>Email:</span>
+              <div class="error-text"></div>
+            </div>
+          </li>
+        </ul>
+      <ul class="d-flex flex-column mt-4">
+          <li>
+            <div class="input">
+              <input id="file-modal" type="file">
+              <label for="file-modal" class="select-file d-flex align-items-center">
+                <svg class="me-2" width="20" height="22" viewBox="0 0 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M14.9524 4.61194C14.3058 4.05176 13.471 3.75725 12.6161 3.78767C11.7612 3.8181 10.9495 4.17121 10.3444 4.77594L3.55835 11.5599C3.42103 11.7073 3.25543 11.8255 3.07143 11.9075C2.88743 11.9895 2.6888 12.0336 2.4874 12.0371C2.28599 12.0407 2.08594 12.0036 1.89916 11.9282C1.71238 11.8527 1.54271 11.7405 1.40028 11.598C1.25784 11.4556 1.14555 11.2859 1.07011 11.0991C0.994666 10.9124 0.957617 10.7123 0.961171 10.5109C0.964725 10.3095 1.00881 10.1109 1.09079 9.92686C1.17278 9.74287 1.29098 9.57726 1.43835 9.43994L8.22235 2.65594C8.81839 2.05189 9.52888 1.57273 10.3123 1.24648C11.0957 0.920238 11.9363 0.753455 12.7849 0.755886C13.6335 0.758316 14.4731 0.929912 15.2546 1.26064C16.0361 1.59137 16.7438 2.07459 17.3364 2.68205C17.929 3.28951 18.3945 4.00901 18.7057 4.79849C19.017 5.58797 19.1677 6.43158 19.149 7.27999C19.1304 8.12839 18.9428 8.96458 18.5972 9.73963C18.2517 10.5147 17.755 11.2131 17.1364 11.7939L7.69035 20.7859C6.96021 21.4983 5.97699 21.8915 4.95698 21.8789C3.93697 21.8663 2.96373 21.4491 2.25135 20.7189C1.53898 19.9888 1.14584 19.0056 1.1584 17.9856C1.17097 16.9656 1.58821 15.9923 2.31835 15.2799L10.8044 6.79194C10.9428 6.64874 11.1084 6.53455 11.2914 6.45602C11.4744 6.3775 11.6713 6.33621 11.8705 6.33457C12.0696 6.33294 12.2671 6.37098 12.4514 6.44649C12.6358 6.522 12.8032 6.63346 12.9439 6.77436C13.0847 6.91527 13.196 7.0828 13.2714 7.26718C13.3467 7.45156 13.3845 7.64909 13.3827 7.84826C13.3809 8.04743 13.3394 8.24424 13.2607 8.42721C13.182 8.61017 13.0677 8.77564 12.9244 8.91394L4.44435 17.4019C4.29599 17.5609 4.21456 17.771 4.21696 17.9884C4.21936 18.2059 4.30541 18.4141 4.45724 18.5697C4.60907 18.7254 4.81502 18.8167 5.03235 18.8245C5.24967 18.8324 5.46168 18.7563 5.62435 18.6119L15.0684 9.61994C15.41 9.29476 15.68 8.90174 15.8608 8.4661C16.0417 8.03047 16.1294 7.56183 16.1185 7.09027C16.1076 6.61871 15.9982 6.15465 15.7974 5.72785C15.5966 5.30105 15.3087 4.92095 14.9524 4.61194Z" fill="white" fill-opacity="0.2"/>
+                </svg>
+                Select file
+              </label>
+              <span>Attach CV:</span>
+              <div class="error-text"></div>
+            </div>
+          </li>
+          <li class="input textarea mt-4">
+            <textarea rows="4" placeholder="Tell us a little about yourself..." type="text" ></textarea>
+            <span>About yourself:</span>
+            <div class="error-text"></div>
+          </li>
+          <li class="mt-4">
+            <div class="input w-100">
+              <button class="cta-btn send-cv-btn w-100">Send CV</button>
+            </div>
+          </li>
+        </ul>
+    </div>
+  </form>
+  <div class="content l thick-bordered d-flex flex-column align-items-center p-4">
+    <svg class="modal-close" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <rect width="40" height="40" rx="20" fill="#478BF9"/>
+      <g clip-path="url(#clip0_506_8776)">
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M19.9996 22.1206L25.3026 27.4246C25.584 27.706 25.9657 27.8641 26.3636 27.8641C26.7616 27.8641 27.1432 27.706 27.4246 27.4246C27.706 27.1432 27.8641 26.7616 27.8641 26.3636C27.8641 25.9657 27.706 25.584 27.4246 25.3026L22.1196 19.9996L27.4236 14.6966C27.5629 14.5573 27.6733 14.3919 27.7487 14.2099C27.824 14.0278 27.8628 13.8328 27.8627 13.6358C27.8627 13.4388 27.8238 13.2437 27.7484 13.0617C27.673 12.8797 27.5624 12.7144 27.4231 12.5751C27.2838 12.4359 27.1184 12.3254 26.9364 12.2501C26.7543 12.1747 26.5592 12.1359 26.3623 12.136C26.1653 12.136 25.9702 12.1749 25.7882 12.2503C25.6062 12.3258 25.4409 12.4363 25.3016 12.5756L19.9996 17.8786L14.6966 12.5756C14.5583 12.4323 14.3928 12.3179 14.2099 12.2392C14.0269 12.1605 13.8301 12.1191 13.6309 12.1173C13.4318 12.1154 13.2342 12.1533 13.0498 12.2286C12.8655 12.304 12.6979 12.4153 12.557 12.556C12.4161 12.6968 12.3047 12.8642 12.2292 13.0485C12.1536 13.2328 12.1156 13.4303 12.1172 13.6295C12.1189 13.8287 12.1602 14.0255 12.2387 14.2086C12.3172 14.3916 12.4314 14.5572 12.5746 14.6956L17.8796 19.9996L12.5756 25.3026C12.2942 25.584 12.1361 25.9657 12.1361 26.3636C12.1361 26.7616 12.2942 27.1432 12.5756 27.4246C12.857 27.706 13.2387 27.8641 13.6366 27.8641C14.0346 27.8641 14.4162 27.706 14.6976 27.4246L19.9996 22.1196V22.1206Z" fill="white"/>
+      </g>
+      <defs>
+        <clipPath id="clip0_506_8776">
+          <rect width="24" height="24" fill="white" transform="translate(8 8)"/>
+        </clipPath>
+      </defs>
+    </svg>
+    <h4 class="text-center mb-3">PPC Specialist Mobile App</h4>
+    <div class="info w-100 mb-4 p-4 d-flex align-items-center justify-content-around">
+      <div class="fix"></div>
+      <div>
+        <div class="title">Department</div>
+        <div class="subtitle">R255G204B41</div>
+      </div>
+      <svg width="2" height="68" viewBox="0 0 2 68" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M1 68V0" stroke="white" stroke-width="2"/>
+      </svg>
+      <div>
+        <div class="title">Experience</div>
+        <div class="subtitle">2 years +</div>
+      </div>
+      <svg width="2" height="68" viewBox="0 0 2 68" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M1 68V0" stroke="white" stroke-width="2"/>
+      </svg>
+      <div>
+        <div class="title">Employment type</div>
+        <div class="subtitle">Remote</div>
+      </div>
+      <div class="fix"></div>
+    </div>
+    <div id="description" class="description my-3 w-100 pe-3">
+      <div class="shadow"></div>
+      <p class="mt-0">Develop a strategy for measuring all campaign activities, including creating and maintaining automated reporting dashboards and fulfilling ad-hoc marketing team reporting requests;
+        Tracking marketing campaigns through all communication channels on an ongoing basis;
+        Regularly reporting on KPIs of the marketing department and preparing reports;
+        Providing insights and strategic recommendations to help create best-in-class marketing experiences across B2B & B2C activities;
+        Analysis of external and internal business environment: competitors, market trends, marketing, sales funnel conversions, etc.
+      </p>
+      <p>Develop a strategy for measuring all campaign activities, including creating and maintaining automated reporting dashboards and fulfilling ad-hoc marketing team reporting requests;
+        Tracking marketing campaigns through all communication channels on an ongoing basis;
+        Regularly reporting on KPIs of the marketing department and preparing reports;
+        Providing insights and strategic recommendations to help create best-in-class marketing experiences across B2B & B2C activities;
+        Analysis of external and internal business environment: competitors, market trends, marketing, sales funnel conversions, etc.
+      </p>
+      <p>Develop a strategy for measuring all campaign activities, including creating and maintaining automated reporting dashboards and fulfilling ad-hoc marketing team reporting requests;
+        Tracking marketing campaigns through all communication channels on an ongoing basis;
+        Regularly reporting on KPIs of the marketing department and preparing reports;
+        Providing insights and strategic recommendations to help create best-in-class marketing experiences across B2B & B2C activities;
+        Analysis of external and internal business environment: competitors, market trends, marketing, sales funnel conversions, etc.
+      </p>
+    </div>
+    <div class="actions d-flex w-100">
+      <button class="btn me-3">
+        <svg width="28" height="14" viewBox="0 0 28 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M3.27799 6.17301C3.65133 4.21301 5.49133 2.86634 7.49133 2.86634H11.398C12.0913 2.86634 12.6647 2.29301 12.6647 1.59967C12.6647 0.906341 12.0913 0.333008 11.398 0.333008H7.62466C4.14466 0.333008 1.03799 2.87967 0.704659 6.34634C0.612475 7.27198 0.71522 8.20666 1.00627 9.09017C1.29733 9.97368 1.77023 10.7864 2.39453 11.476C3.01882 12.1656 3.78065 12.7168 4.63094 13.0941C5.48122 13.4713 6.40111 13.6663 7.33133 13.6663H11.398C12.0913 13.6663 12.6647 13.093 12.6647 12.3997C12.6647 11.7063 12.0913 11.133 11.398 11.133H7.33133C6.71889 11.1311 6.11447 10.9936 5.56151 10.7303C5.00855 10.467 4.52077 10.0845 4.13323 9.61031C3.74569 9.13608 3.468 8.58189 3.32013 7.98757C3.17225 7.39325 3.15786 6.77355 3.27799 6.17301ZM9.99799 8.33301H17.998C18.7313 8.33301 19.3313 7.73301 19.3313 6.99967C19.3313 6.26634 18.7313 5.66634 17.998 5.66634H9.99799C9.26466 5.66634 8.66466 6.26634 8.66466 6.99967C8.66466 7.73301 9.26466 8.33301 9.99799 8.33301ZM20.3713 0.333008H16.598C15.9047 0.333008 15.3313 0.906341 15.3313 1.59967C15.3313 2.29301 15.9047 2.86634 16.598 2.86634H20.5047C22.5047 2.86634 24.3447 4.21301 24.718 6.17301C24.8381 6.77355 24.8237 7.39325 24.6759 7.98757C24.528 8.58189 24.2503 9.13608 23.8628 9.61031C23.4752 10.0845 22.9874 10.467 22.4345 10.7303C21.8815 10.9936 21.2771 11.1311 20.6647 11.133H16.598C15.9047 11.133 15.3313 11.7063 15.3313 12.3997C15.3313 13.093 15.9047 13.6663 16.598 13.6663H20.6647C24.558 13.6663 27.678 10.3197 27.3047 6.34634C26.9713 2.87967 23.8513 0.333008 20.3713 0.333008Z" fill="#478BF9"/>
+        </svg>
+      </button>
+      <button class="cta-btn flex-grow-1">Apply this position</button>
+    </div>
+  </div>
+</div>
+<script src="lib/scrollbar.js"></script>
 <script src="lib/splide/dist/js/splide.min.js"></script>
 <script src="index.js"></script>
 <script src="lib/Filter.js"></script>
