add scroll styles to textarea

--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
              </li>
             </ul>
             <div class="input textarea mt-3">
-              <textarea rows="4" placeholder="Message..." type="text" ></textarea>
+              <textarea id="contact-textarea" rows="4" placeholder="Message..." type="text" ></textarea>
               <span>Message:</span>
               <div class="error-text"></div>
             </div>
