--- a/careers.html
+++ b/careers.html
@@ -532,7 +532,7 @@
           </li>
           <li class="mt-4">
             <div class="input w-100">
-              <button class="cta-btn send-cv-btn w-100">Send CV</button>
+              <button class="cta-btn w-100">Send CV</button>
             </div>
           </li>
         </ul>
