bg animation for hero

--- a/careers.html
+++ b/careers.html
@@ -69,6 +69,49 @@
 </aside>
 
 <section id="hero" class="d-flex flex-column align-items-center justify-content-center px-5">
+  <div class="shadow d-none d-md-flex justify-content-between">
+    <div class="animation-bg d-flex">
+      <div class="left d-flex flex-column">
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
+      </div>
+      <div class="center d-flex mx-3 flex-column">
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
+      </div>
+      <div class="right d-flex flex-column">
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_3.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_3.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_3.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_3.svg"></object>
+      </div>
+    </div>
+    <div class="gradient"></div>
+    <div class="animation-bg d-flex flex-row-reverse">
+      <div class="left d-flex flex-column">
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
+      </div>
+      <div class="center d-flex mx-3 flex-column">
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
+      </div>
+      <div class="right d-flex flex-column">
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_3.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_3.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_3.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/commissions_3.svg"></object>
+      </div>
+    </div>
+  </div>
   <object class="careers-logo" type="image/svg+xml" data="assets/icons/careers_logo.svg"></object>
   <object class="bg circle" type="image/svg+xml" data="assets/backgrounds/careers_circle.svg"></object>
   <h2 class="text-center">Make yourself at home</h2>
