--- a/brand-guide.html
+++ b/brand-guide.html
@@ -5,6 +5,21 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <style>
+    #header .container > * {
+      max-height: 51px;
+    }
+    @media (min-width: 1120px) {
+      #header .container > * {
+        max-height: 70px;
+      }
+    }
+    @media (min-width: 1441px) {
+      #header .container > * {
+        max-height: 93px;
+      }
+    }
+  </style>
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/pages/brand-guide.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-grid.css">
