fix brands circle

--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
     </div>
     <button class="cta-btn mt-5">Become a partner</button>
   </div>
+  <object class="bg circle-bottom" type="image/svg+xml" data="assets/backgrounds/brands_circle.svg"></object>
 </section>
 
 <section id="brands">
   <h2 class="text-center mb-5">Our brands</h2>
-  <object class="bg circle" type="image/svg+xml" data="assets/backgrounds/brands_circle.svg"></object>
   <div class="container">
     <div class="splide" aria-label="...">
       <div class="my-carousel-progress d-md-none mb-5">
