add link to modal

--- a/careers.html
+++ b/careers.html
@@ -256,6 +256,7 @@
           data-department="dep1"
           data-experience="3 years +"
           data-employment="remote"
+          data-link="google.com"
           class="card tinted thick-bordered d-flex flex-column"
       >
         <small class="d-block" data-marker="it">IT</small>
@@ -282,6 +283,7 @@
           data-department="dep2"
           data-experience="5 years"
           data-employment="hybrid"
+          data-link="google.com"
           class="card tinted thick-bordered d-flex flex-column"
       >
         <small class="d-block" data-marker="marketing">Marketing</small>
@@ -474,49 +476,31 @@
         </clipPath>
       </defs>
     </svg>
-    <h4 class="text-center mb-3 positionName">PPC Specialist Mobile App</h4>
+    <h4 class="text-center mb-3 positionName"></h4>
     <div class="info w-100 mb-4 p-4 d-flex align-items-center justify-content-around">
       <div class="fix"></div>
       <div>
         <div class="title">Department</div>
-        <div class="subtitle department">R255G204B41</div>
+        <div class="subtitle department"></div>
       </div>
       <svg width="2" height="68" viewBox="0 0 2 68" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M1 68V0" stroke="white" stroke-width="2"/>
       </svg>
       <div>
         <div class="title">Experience</div>
-        <div class="subtitle experience">2 years +</div>
+        <div class="subtitle experience"></div>
       </div>
       <svg width="2" height="68" viewBox="0 0 2 68" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M1 68V0" stroke="white" stroke-width="2"/>
       </svg>
       <div>
         <div class="title">Employment type</div>
-        <div class="subtitle employment">Remote</div>
+        <div class="subtitle employment"></div>
       </div>
       <div class="fix"></div>
     </div>
     <div id="description" class="description my-3 w-100 pe-3">
       <div class="shadow"></div>
-      <p class="mt-0">Develop a strategy for measuring all campaign activities, including creating and maintaining automated reporting dashboards and fulfilling ad-hoc marketing team reporting requests;
-        Tracking marketing campaigns through all communication channels on an ongoing basis;
-        Regularly reporting on KPIs of the marketing department and preparing reports;
-        Providing insights and strategic recommendations to help create best-in-class marketing experiences across B2B & B2C activities;
-        Analysis of external and internal business environment: competitors, market trends, marketing, sales funnel conversions, etc.
-      </p>
-      <p>Develop a strategy for measuring all campaign activities, including creating and maintaining automated reporting dashboards and fulfilling ad-hoc marketing team reporting requests;
-        Tracking marketing campaigns through all communication channels on an ongoing basis;
-        Regularly reporting on KPIs of the marketing department and preparing reports;
-        Providing insights and strategic recommendations to help create best-in-class marketing experiences across B2B & B2C activities;
-        Analysis of external and internal business environment: competitors, market trends, marketing, sales funnel conversions, etc.
-      </p>
-      <p>Develop a strategy for measuring all campaign activities, including creating and maintaining automated reporting dashboards and fulfilling ad-hoc marketing team reporting requests;
-        Tracking marketing campaigns through all communication channels on an ongoing basis;
-        Regularly reporting on KPIs of the marketing department and preparing reports;
-        Providing insights and strategic recommendations to help create best-in-class marketing experiences across B2B & B2C activities;
-        Analysis of external and internal business environment: competitors, market trends, marketing, sales funnel conversions, etc.
-      </p>
     </div>
     <div class="actions d-flex w-100">
       <button class="btn me-3">
