--- a/brand-guide.html
+++ b/brand-guide.html
@@ -108,15 +108,15 @@
     <ul class="mt-4 d-flex flex-column flex-md-row justify-content-between w-100">
       <li class="flex-grow-1 card tinted thick-bordered d-flex flex-column justify-content-center">
         <object data="assets/icons/logo_brand_guide_hero.svg" type="image/svg+xml"></object>
-        <div class="cta-btn mt-3">Logo set</div>
+        <a href="#" class="cta-btn mt-3">Logo set</a>
       </li>
       <li class="flex-grow-1 card tinted thick-bordered d-flex flex-column justify-content-center">
         <object data="assets/icons/logo_brand_guide_hero.svg" type="image/svg+xml"></object>
-        <div class="cta-btn mt-3">Brand guide (full)</div>
+        <a href="#" class="cta-btn mt-3">Brand guide (full)</a>
       </li>
       <li class="flex-grow-1 card tinted thick-bordered d-flex flex-column justify-content-center">
         <object data="assets/icons/logo_brand_guide_hero.svg" type="image/svg+xml"></object>
-        <div class="cta-btn mt-3">Brand guide (short)</div>
+        <a href="#" class="cta-btn mt-3">Brand guide (short)</a>
       </li>
     </ul>
   </div>
