adjust animation at home

--- a/index.html
+++ b/index.html
@@ -72,23 +72,23 @@
   <div class="shadow d-none d-md-flex justify-content-center">
     <div class="gradient"></div>
     <div class="animation-bg mx-auto d-flex ">
-      <div class="center d-flex flex-column">
-        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
-      </div>
-      <div class="right d-flex mx-3 flex-column">
-        <object type="image/svg+xml" data="assets/backgrounds/home_animation_right.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/home_animation_right.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/home_animation_right.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/home_animation_right.svg"></object>
-      </div>
       <div class="left d-flex flex-column">
         <object type="image/svg+xml" data="assets/backgrounds/home_animation_left.svg"></object>
         <object type="image/svg+xml" data="assets/backgrounds/home_animation_left.svg"></object>
         <object type="image/svg+xml" data="assets/backgrounds/home_animation_left.svg"></object>
         <object type="image/svg+xml" data="assets/backgrounds/home_animation_left.svg"></object>
+      </div>
+      <div class="center d-flex mx-3 flex-column">
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+      </div>
+      <div class="right d-flex flex-column">
+        <object type="image/svg+xml" data="assets/backgrounds/home_animation_right.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/home_animation_right.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/home_animation_right.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/home_animation_right.svg"></object>
       </div>
     </div>
   </div>
