--- a/index.html
+++ b/index.html
@@ -551,13 +551,7 @@
 <section id="commissions">
   <div class="shadow d-none d-md-flex justify-content-between">
     <div class="animation-bg d-flex">
-      <div class="left d-flex flex-column">
-        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
-      </div>
-      <div class="center d-flex mx-3 flex-column">
+      <div class="center d-flex me-5 flex-column">
         <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
         <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
         <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
@@ -572,13 +566,7 @@
     </div>
     <div class="gradient"></div>
     <div class="animation-bg d-flex flex-row-reverse">
-      <div class="left d-flex flex-column">
-        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
-      </div>
-      <div class="center d-flex mx-3 flex-column">
+      <div class="center d-flex ms-5 flex-column">
         <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
         <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
         <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
