careers animation bg

--- a/careers.html
+++ b/careers.html
@@ -71,13 +71,7 @@
 <section id="hero" class="d-flex flex-column align-items-center justify-content-center px-5">
   <div class="shadow d-none d-md-flex justify-content-between">
     <div class="animation-bg d-flex">
-      <div class="left d-flex flex-column">
-        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
-      </div>
-      <div class="center d-flex mx-3 flex-column">
+      <div class="center d-flex me-5 flex-column">
         <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
         <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
         <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
@@ -92,13 +86,7 @@
     </div>
     <div class="gradient"></div>
     <div class="animation-bg d-flex flex-row-reverse">
-      <div class="left d-flex flex-column">
-        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
-        <object type="image/svg+xml" data="assets/backgrounds/commissions_1.svg"></object>
-      </div>
-      <div class="center d-flex mx-3 flex-column">
+      <div class="center d-flex ms-5 flex-column">
         <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
         <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
         <object type="image/svg+xml" data="assets/backgrounds/commissions_2.svg"></object>
