guide remove sidebar bg

--- a/brand-guide.html
+++ b/brand-guide.html
@@ -130,7 +130,7 @@
 
 <section id="guide" class="d-md-block d-none">
   <object class="bg light d-none d-md-block" style="pointer-events: none" type="image/svg+xml" data="assets/backgrounds/guide_light.svg"></object>
-  <object class="bg coins d-none d-md-block" style="pointer-events: none" type="image/svg+xml" data="assets/backgrounds/guide_left_bottom.svg"></object>
+<!--  <object class="bg coins d-none d-md-block" style="pointer-events: none" type="image/svg+xml" data="assets/backgrounds/guide_left_bottom.svg"></object>-->
   <object class="bg circle d-none d-md-block" style="pointer-events: none" type="image/svg+xml" data="assets/backgrounds/guide_dot.svg"></object>
   <div class="container d-flex">
     <nav>
