--- a/index.html
+++ b/index.html
@@ -113,6 +113,49 @@
           <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
           <small class="mt-3 d-block">10.02.2023</small>
         </div>
+        <div class="card tinted">
+          <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+          <small class="mt-3 d-block">10.02.2023</small>
+        </div><div class="card tinted">
+        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+        <small class="mt-3 d-block">10.02.2023</small>
+      </div><div class="card tinted">
+        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+        <small class="mt-3 d-block">10.02.2023</small>
+      </div><div class="card tinted">
+        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+        <small class="mt-3 d-block">10.02.2023</small>
+      </div><div class="card tinted">
+        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+        <small class="mt-3 d-block">10.02.2023</small>
+      </div><div class="card tinted">
+        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+        <small class="mt-3 d-block">10.02.2023</small>
+      </div><div class="card tinted">
+        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+        <small class="mt-3 d-block">10.02.2023</small>
+      </div><div class="card tinted">
+        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+        <small class="mt-3 d-block">10.02.2023</small>
+      </div><div class="card tinted">
+        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+        <small class="mt-3 d-block">10.02.2023</small>
+      </div><div class="card tinted">
+        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+        <small class="mt-3 d-block">10.02.2023</small>
+      </div><div class="card tinted">
+        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+        <small class="mt-3 d-block">10.02.2023</small>
+      </div><div class="card tinted">
+        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+        <small class="mt-3 d-block">10.02.2023</small>
+      </div><div class="card tinted">
+        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+        <small class="mt-3 d-block">10.02.2023</small>
+      </div><div class="card tinted">
+        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+        <small class="mt-3 d-block">10.02.2023</small>
+      </div>
       </div>
     </div>
   </div>
