--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
     <div class="blog-container d-none d-md-block">
       <h3>Blog</h3>
-      <div id="blog" class="d-none d-md-flex" data-simplebar data-simplebar-auto-hide="false" data-simplebar-click-on-track="false">
+      <div id="blog" class="d-none d-md-flex flex-column" data-simplebar data-simplebar-auto-hide="false" data-simplebar-click-on-track="false">
         <div class="card tinted">
           <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
           <small class="mt-3 d-block">10.02.2023</small>
@@ -113,49 +113,6 @@
           <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
           <small class="mt-3 d-block">10.02.2023</small>
         </div>
-        <div class="card tinted">
-          <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-          <small class="mt-3 d-block">10.02.2023</small>
-        </div><div class="card tinted">
-        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-        <small class="mt-3 d-block">10.02.2023</small>
-      </div><div class="card tinted">
-        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-        <small class="mt-3 d-block">10.02.2023</small>
-      </div><div class="card tinted">
-        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-        <small class="mt-3 d-block">10.02.2023</small>
-      </div><div class="card tinted">
-        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-        <small class="mt-3 d-block">10.02.2023</small>
-      </div><div class="card tinted">
-        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-        <small class="mt-3 d-block">10.02.2023</small>
-      </div><div class="card tinted">
-        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-        <small class="mt-3 d-block">10.02.2023</small>
-      </div><div class="card tinted">
-        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-        <small class="mt-3 d-block">10.02.2023</small>
-      </div><div class="card tinted">
-        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-        <small class="mt-3 d-block">10.02.2023</small>
-      </div><div class="card tinted">
-        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-        <small class="mt-3 d-block">10.02.2023</small>
-      </div><div class="card tinted">
-        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-        <small class="mt-3 d-block">10.02.2023</small>
-      </div><div class="card tinted">
-        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-        <small class="mt-3 d-block">10.02.2023</small>
-      </div><div class="card tinted">
-        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-        <small class="mt-3 d-block">10.02.2023</small>
-      </div><div class="card tinted">
-        <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
-        <small class="mt-3 d-block">10.02.2023</small>
-      </div>
       </div>
     </div>
   </div>
