--- a/index.html
+++ b/index.html
@@ -69,29 +69,29 @@
 </aside>
 
 <section id="hero" class="d-flex flex-column flex-md-row align-items-center">
-<!--  <div class="shadow d-none d-md-flex justify-content-center">-->
-<!--    <div class="gradient"></div>-->
-<!--    <div class="animation-bg mx-auto d-flex ">-->
-<!--      <div class="left d-flex flex-column">-->
-<!--        <object type="image/svg+xml" data="assets/backgrounds/home_animation_left.svg"></object>-->
-<!--        <object type="image/svg+xml" data="assets/backgrounds/home_animation_left.svg"></object>-->
-<!--        <object type="image/svg+xml" data="assets/backgrounds/home_animation_left.svg"></object>-->
-<!--        <object type="image/svg+xml" data="assets/backgrounds/home_animation_left.svg"></object>-->
-<!--      </div>-->
-<!--      <div class="center d-flex mx-3 flex-column">-->
-<!--        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>-->
-<!--        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>-->
-<!--        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>-->
-<!--        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>-->
-<!--      </div>-->
-<!--      <div class="right d-flex flex-column">-->
-<!--        <object type="image/svg+xml" data="assets/backgrounds/home_animation_right.svg"></object>-->
-<!--        <object type="image/svg+xml" data="assets/backgrounds/home_animation_right.svg"></object>-->
-<!--        <object type="image/svg+xml" data="assets/backgrounds/home_animation_right.svg"></object>-->
-<!--        <object type="image/svg+xml" data="assets/backgrounds/home_animation_right.svg"></object>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
+  <div class="shadow d-none d-md-flex justify-content-center">
+    <div class="gradient"></div>
+    <div class="animation-bg mx-auto d-flex ">
+      <div class="left d-flex flex-column">
+        <object type="image/svg+xml" data="assets/backgrounds/home_animation_left.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/home_animation_left.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/home_animation_left.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/home_animation_left.svg"></object>
+      </div>
+      <div class="center d-flex mx-3 flex-column">
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/hero_animation_center.svg"></object>
+      </div>
+      <div class="right d-flex flex-column">
+        <object type="image/svg+xml" data="assets/backgrounds/home_animation_right.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/home_animation_right.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/home_animation_right.svg"></object>
+        <object type="image/svg+xml" data="assets/backgrounds/home_animation_right.svg"></object>
+      </div>
+    </div>
+  </div>
   <object type="image/svg+xml" class="bg light" data="assets/backgrounds/hero-light.svg"></object>
   <object type="image/svg+xml" class="bg circle d-none d-md-block" data="assets/backgrounds/hero_circle.svg"></object>
   <div class="container py-5 d-flex flex-column flex-md-row justify-content-between align-items-center">
