--- a/index.html
+++ b/index.html
@@ -661,6 +661,101 @@
   </div>
 </section>
 
+<section id="testimonials">
+  <object class="bg light" type="image/svg+xml" data="assets/backgrounds/testimonials_light.svg"></object>
+
+  <h2 class="text-center mb-4 mb-md-5">Testimonials</h2>
+  <div class="splide" aria-label="...">
+    <div class="splide__track">
+      <ul class="splide__list d-flex">
+        <li class="splide__slide d-flex align-items-center">
+          <div class="testimonial thick-bordered p-5">
+<!--            <object type="image/svg+xml" class="ball_t-l" data="assets/icons/ball.svg"></object>-->
+            <object type="image/svg+xml" class="ball_b-r" data="assets/icons/ball.svg"></object>
+
+            <div class="content d-flex flex-column align-items-center justify-content-center">
+              <q>Megapartners have shown themselves to be a top company. We have had the pleasure of working with their affiliate team. We are very happy to report they were approachable and dependable. They went above and beyond to help us show Megapartners to our player and community. You can rely on them work on your goal and make it a reality!</q>
+              <div class="mt-5 link d-flex flex-column flex-md-row align-items-center align-items-md-center">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M21.2538 5.57832C19.1984 2.76034 16.5018 1.1626 12.9532 0.75C14.6134 2.67255 15.7552 4.75312 16.4843 7.07949C18.1444 6.73712 19.7166 6.2894 21.2538 5.57832Z" fill="#478BF9"/>
+                  <path d="M6.37508 8.28432C5.74502 8.11954 5.13295 7.95946 4.52984 7.77304C3.99087 7.59909 3.45908 7.40004 2.92759 7.2011C2.62755 7.08879 2.3276 6.97652 2.02651 6.86882C0.243437 10.0028 0.410326 14.4537 2.01773 17.0785C2.91598 16.7962 3.80691 16.514 4.70596 16.2291L4.70759 16.2286C5.51338 15.9733 6.32617 15.7158 7.15613 15.4545C6.68182 13.172 6.6906 10.8193 7.16492 8.4929C6.89811 8.4211 6.63505 8.35231 6.37508 8.28432Z" fill="#478BF9"/>
+                  <path d="M19.4188 7.7377C18.5624 8.00983 17.7053 8.28221 16.8445 8.55433C17.3189 10.8544 17.3013 13.1895 16.8445 15.4457C18.5837 15.9987 20.2789 16.5342 21.9917 17.0697C23.6782 14.1815 23.6606 9.79214 21.9917 6.92148C21.1312 7.19355 20.275 7.46563 19.4188 7.7377Z" fill="#478BF9"/>
+                  <path d="M8.5791 15.3403C8.08722 13.1105 8.10479 10.9246 8.55275 8.73869C8.91092 8.75974 9.26276 8.78475 9.61019 8.80944C10.4214 8.86709 11.2088 8.92304 11.9959 8.92304C12.783 8.92304 13.57 8.86711 14.3812 8.80946C14.7286 8.78478 15.081 8.75974 15.4391 8.73869C15.9222 10.8895 15.9046 13.093 15.4303 15.3315C13.129 15.0331 10.8804 15.0155 8.5791 15.3403Z" fill="#478BF9"/>
+                  <path d="M21.2539 18.4129C19.2161 21.2309 16.5108 22.8198 12.9622 23.25C14.5959 21.3362 15.7641 19.2644 16.4756 16.9293C18.1269 17.2453 19.6904 17.7194 21.2539 18.4129Z" fill="#478BF9"/>
+                  <path d="M11.0384 0.75C7.48983 1.17138 4.78448 2.76912 2.67641 5.67489C4.32773 6.18406 5.88243 6.66689 7.48983 7.16728C8.23643 4.73556 9.39587 2.67255 11.0384 0.75Z" fill="#478BF9"/>
+                  <path d="M11.0384 23.25C7.49861 22.8286 4.80205 21.2396 2.67641 18.3251C3.20288 18.1628 3.71952 18.0031 4.23119 17.845L4.23342 17.8443C5.32585 17.5067 6.39565 17.1761 7.48983 16.8415C8.23643 19.2469 9.3783 21.3274 11.0384 23.25Z" fill="#478BF9"/>
+                  <path d="M15.0611 7.2902C14.4024 5.22719 13.3923 3.42754 11.9957 1.79469C10.5903 3.45387 9.57139 5.24474 8.93897 7.2902C11.0031 7.56234 13.0058 7.57112 15.0611 7.2902Z" fill="#478BF9"/>
+                  <path d="M12.0045 22.2053C10.6079 20.5812 9.59774 18.7816 8.93897 16.7186C10.9856 16.4289 12.9882 16.4376 15.0699 16.7098C14.4112 18.764 13.401 20.5549 12.0045 22.2053Z" fill="#478BF9"/>
+                </svg>
+                <a href="https://epicpartners.com" class="feedback-link d-block mt-1 mt-md-0 ms-md-2">epicpartners.com</a>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="splide__slide d-flex align-items-center">
+          <div class="testimonial thick-bordered p-5">
+<!--            <object type="image/svg+xml" class="ball_t-l" data="assets/icons/ball.svg"></object>-->
+            <object type="image/svg+xml" class="ball_b-r" data="assets/icons/ball.svg"></object>
+
+            <div class="content d-flex flex-column align-items-center justify-content-center">
+              <q>We have had the pleasure of working with their affiliate team. We are very happy to report they were approachable and dependable. You can rely on them work on your goal and make it a reality!</q>
+              <div class="mt-5 link d-flex flex-column flex-md-row align-items-center align-items-md-center">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M21.2538 5.57832C19.1984 2.76034 16.5018 1.1626 12.9532 0.75C14.6134 2.67255 15.7552 4.75312 16.4843 7.07949C18.1444 6.73712 19.7166 6.2894 21.2538 5.57832Z" fill="#478BF9"/>
+                  <path d="M6.37508 8.28432C5.74502 8.11954 5.13295 7.95946 4.52984 7.77304C3.99087 7.59909 3.45908 7.40004 2.92759 7.2011C2.62755 7.08879 2.3276 6.97652 2.02651 6.86882C0.243437 10.0028 0.410326 14.4537 2.01773 17.0785C2.91598 16.7962 3.80691 16.514 4.70596 16.2291L4.70759 16.2286C5.51338 15.9733 6.32617 15.7158 7.15613 15.4545C6.68182 13.172 6.6906 10.8193 7.16492 8.4929C6.89811 8.4211 6.63505 8.35231 6.37508 8.28432Z" fill="#478BF9"/>
+                  <path d="M19.4188 7.7377C18.5624 8.00983 17.7053 8.28221 16.8445 8.55433C17.3189 10.8544 17.3013 13.1895 16.8445 15.4457C18.5837 15.9987 20.2789 16.5342 21.9917 17.0697C23.6782 14.1815 23.6606 9.79214 21.9917 6.92148C21.1312 7.19355 20.275 7.46563 19.4188 7.7377Z" fill="#478BF9"/>
+                  <path d="M8.5791 15.3403C8.08722 13.1105 8.10479 10.9246 8.55275 8.73869C8.91092 8.75974 9.26276 8.78475 9.61019 8.80944C10.4214 8.86709 11.2088 8.92304 11.9959 8.92304C12.783 8.92304 13.57 8.86711 14.3812 8.80946C14.7286 8.78478 15.081 8.75974 15.4391 8.73869C15.9222 10.8895 15.9046 13.093 15.4303 15.3315C13.129 15.0331 10.8804 15.0155 8.5791 15.3403Z" fill="#478BF9"/>
+                  <path d="M21.2539 18.4129C19.2161 21.2309 16.5108 22.8198 12.9622 23.25C14.5959 21.3362 15.7641 19.2644 16.4756 16.9293C18.1269 17.2453 19.6904 17.7194 21.2539 18.4129Z" fill="#478BF9"/>
+                  <path d="M11.0384 0.75C7.48983 1.17138 4.78448 2.76912 2.67641 5.67489C4.32773 6.18406 5.88243 6.66689 7.48983 7.16728C8.23643 4.73556 9.39587 2.67255 11.0384 0.75Z" fill="#478BF9"/>
+                  <path d="M11.0384 23.25C7.49861 22.8286 4.80205 21.2396 2.67641 18.3251C3.20288 18.1628 3.71952 18.0031 4.23119 17.845L4.23342 17.8443C5.32585 17.5067 6.39565 17.1761 7.48983 16.8415C8.23643 19.2469 9.3783 21.3274 11.0384 23.25Z" fill="#478BF9"/>
+                  <path d="M15.0611 7.2902C14.4024 5.22719 13.3923 3.42754 11.9957 1.79469C10.5903 3.45387 9.57139 5.24474 8.93897 7.2902C11.0031 7.56234 13.0058 7.57112 15.0611 7.2902Z" fill="#478BF9"/>
+                  <path d="M12.0045 22.2053C10.6079 20.5812 9.59774 18.7816 8.93897 16.7186C10.9856 16.4289 12.9882 16.4376 15.0699 16.7098C14.4112 18.764 13.401 20.5549 12.0045 22.2053Z" fill="#478BF9"/>
+                </svg>
+                <a href="https://epicpartners.com" class="feedback-link d-block mt-1 mt-md-0 ms-md-2">epicpartners.com</a>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="splide__slide d-flex align-items-center">
+          <div class="testimonial thick-bordered p-5">
+<!--            <object type="image/svg+xml" class="ball_t-l" data="assets/icons/ball.svg"></object>-->
+            <object type="image/svg+xml" class="ball_b-r" data="assets/icons/ball.svg"></object>
+
+            <div class="content d-flex flex-column align-items-center justify-content-center">
+              <q>Megapartners have shown themselves to be a top company. We are very happy to report they were approachable and dependable. They went above and beyond to help us show Megapartners to our player and community.</q>
+              <div class="mt-5 link d-flex flex-column flex-md-row align-items-center align-items-md-center">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M21.2538 5.57832C19.1984 2.76034 16.5018 1.1626 12.9532 0.75C14.6134 2.67255 15.7552 4.75312 16.4843 7.07949C18.1444 6.73712 19.7166 6.2894 21.2538 5.57832Z" fill="#478BF9"/>
+                  <path d="M6.37508 8.28432C5.74502 8.11954 5.13295 7.95946 4.52984 7.77304C3.99087 7.59909 3.45908 7.40004 2.92759 7.2011C2.62755 7.08879 2.3276 6.97652 2.02651 6.86882C0.243437 10.0028 0.410326 14.4537 2.01773 17.0785C2.91598 16.7962 3.80691 16.514 4.70596 16.2291L4.70759 16.2286C5.51338 15.9733 6.32617 15.7158 7.15613 15.4545C6.68182 13.172 6.6906 10.8193 7.16492 8.4929C6.89811 8.4211 6.63505 8.35231 6.37508 8.28432Z" fill="#478BF9"/>
+                  <path d="M19.4188 7.7377C18.5624 8.00983 17.7053 8.28221 16.8445 8.55433C17.3189 10.8544 17.3013 13.1895 16.8445 15.4457C18.5837 15.9987 20.2789 16.5342 21.9917 17.0697C23.6782 14.1815 23.6606 9.79214 21.9917 6.92148C21.1312 7.19355 20.275 7.46563 19.4188 7.7377Z" fill="#478BF9"/>
+                  <path d="M8.5791 15.3403C8.08722 13.1105 8.10479 10.9246 8.55275 8.73869C8.91092 8.75974 9.26276 8.78475 9.61019 8.80944C10.4214 8.86709 11.2088 8.92304 11.9959 8.92304C12.783 8.92304 13.57 8.86711 14.3812 8.80946C14.7286 8.78478 15.081 8.75974 15.4391 8.73869C15.9222 10.8895 15.9046 13.093 15.4303 15.3315C13.129 15.0331 10.8804 15.0155 8.5791 15.3403Z" fill="#478BF9"/>
+                  <path d="M21.2539 18.4129C19.2161 21.2309 16.5108 22.8198 12.9622 23.25C14.5959 21.3362 15.7641 19.2644 16.4756 16.9293C18.1269 17.2453 19.6904 17.7194 21.2539 18.4129Z" fill="#478BF9"/>
+                  <path d="M11.0384 0.75C7.48983 1.17138 4.78448 2.76912 2.67641 5.67489C4.32773 6.18406 5.88243 6.66689 7.48983 7.16728C8.23643 4.73556 9.39587 2.67255 11.0384 0.75Z" fill="#478BF9"/>
+                  <path d="M11.0384 23.25C7.49861 22.8286 4.80205 21.2396 2.67641 18.3251C3.20288 18.1628 3.71952 18.0031 4.23119 17.845L4.23342 17.8443C5.32585 17.5067 6.39565 17.1761 7.48983 16.8415C8.23643 19.2469 9.3783 21.3274 11.0384 23.25Z" fill="#478BF9"/>
+                  <path d="M15.0611 7.2902C14.4024 5.22719 13.3923 3.42754 11.9957 1.79469C10.5903 3.45387 9.57139 5.24474 8.93897 7.2902C11.0031 7.56234 13.0058 7.57112 15.0611 7.2902Z" fill="#478BF9"/>
+                  <path d="M12.0045 22.2053C10.6079 20.5812 9.59774 18.7816 8.93897 16.7186C10.9856 16.4289 12.9882 16.4376 15.0699 16.7098C14.4112 18.764 13.401 20.5549 12.0045 22.2053Z" fill="#478BF9"/>
+                </svg>
+                <a href="https://epicpartners.com" class="feedback-link d-block mt-1 mt-md-0 ms-md-2">epicpartners.com</a>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+
+    <div class="splide__arrows d-block">
+      <svg class="splide__arrow splide__arrow--prev left" width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <rect width="56" height="56" rx="28" fill="#478BF9"/>
+        <path d="M26.4999 37.7337L17.6999 28.9337C17.5666 28.8004 17.4719 28.656 17.4159 28.5004C17.3599 28.3449 17.3324 28.1782 17.3333 28.0004C17.3333 27.8226 17.3613 27.656 17.4173 27.5004C17.4733 27.3449 17.5675 27.2004 17.6999 27.0671L26.4999 18.2671C26.7444 18.0226 27.0502 17.8951 27.4173 17.8844C27.7844 17.8737 28.1008 18.0013 28.3666 18.2671C28.6333 18.5115 28.7724 18.8173 28.7839 19.1844C28.7955 19.5515 28.6675 19.868 28.3999 20.1337L21.8666 26.6671H36.7666C37.1444 26.6671 37.4613 26.7951 37.7173 27.0511C37.9733 27.3071 38.1008 27.6235 38.0999 28.0004C38.0999 28.3782 37.9724 28.6951 37.7173 28.9511C37.4622 29.2071 37.1453 29.3346 36.7666 29.3337H21.8666L28.3999 35.8671C28.6444 36.1115 28.7724 36.4226 28.7839 36.8004C28.7955 37.1782 28.6675 37.4893 28.3999 37.7337C28.1555 38.0004 27.8444 38.1337 27.4666 38.1337C27.0888 38.1337 26.7666 38.0004 26.4999 37.7337Z" fill="#110A1D"/>
+      </svg>
+      <svg class="splide__arrow splide__arrow--next right" width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <rect width="56" height="56" rx="28" fill="#478BF9"/>
+        <path d="M27.0668 37.7337C26.8224 37.4893 26.6944 37.1782 26.6828 36.8004C26.6713 36.4226 26.7882 36.1115 27.0335 35.8671L33.5668 29.3337H18.6668C18.2891 29.3337 17.9722 29.2057 17.7162 28.9497C17.4602 28.6937 17.3326 28.3773 17.3335 28.0004C17.3335 27.6226 17.4615 27.3057 17.7175 27.0497C17.9735 26.7937 18.2899 26.6662 18.6668 26.6671H33.5668L27.0335 20.1337C26.7891 19.8893 26.6722 19.5782 26.6828 19.2004C26.6935 18.8226 26.8215 18.5115 27.0668 18.2671C27.3113 18.0226 27.6224 17.9004 28.0002 17.9004C28.3779 17.9004 28.6891 18.0226 28.9335 18.2671L37.7335 27.0671C37.8668 27.1782 37.9615 27.3173 38.0175 27.4844C38.0735 27.6515 38.1011 27.8235 38.1002 28.0004C38.1002 28.1782 38.0726 28.3448 38.0175 28.5004C37.9624 28.6559 37.8677 28.8004 37.7335 28.9337L28.9335 37.7337C28.6891 37.9782 28.3779 38.1004 28.0002 38.1004C27.6224 38.1004 27.3113 37.9782 27.0668 37.7337Z" fill="#110A1D"/>
+      </svg>
+    </div>
+  </div>
+</section>
+
 <section id="events">
 <!--  <object class="bg circle-bottom d-none d-md-block" type="image/svg+xml" data="assets/backgrounds/home_events_bottom_circle.svg"></object>-->
   <object class="bg circle d-md-none" type="image/svg+xml" data="assets/backgrounds/home_events_circle.svg"></object>
