--- a/index.html
+++ b/index.html
@@ -669,8 +669,8 @@
     <div class="splide__track">
       <ul class="splide__list d-flex">
         <li class="splide__slide d-flex align-items-center">
-          <div class="testimonial thick-bordered p-5">
-<!--            <object type="image/svg+xml" class="ball_t-l" data="assets/icons/ball.svg"></object>-->
+          <div class="testimonial thick-bordered p-4 p-md-5">
+            <object type="image/svg+xml" class="ball_t-l" data="assets/icons/m-coin.svg"></object>
             <object type="image/svg+xml" class="ball_b-r" data="assets/icons/ball.svg"></object>
 
             <div class="content d-flex flex-column align-items-center justify-content-center">
@@ -693,8 +693,8 @@
           </div>
         </li>
         <li class="splide__slide d-flex align-items-center">
-          <div class="testimonial thick-bordered p-5">
-<!--            <object type="image/svg+xml" class="ball_t-l" data="assets/icons/ball.svg"></object>-->
+          <div class="testimonial thick-bordered p-4 p-md-5">
+            <object type="image/svg+xml" class="ball_t-l" data="assets/icons/m-coin.svg"></object>
             <object type="image/svg+xml" class="ball_b-r" data="assets/icons/ball.svg"></object>
 
             <div class="content d-flex flex-column align-items-center justify-content-center">
@@ -717,8 +717,8 @@
           </div>
         </li>
         <li class="splide__slide d-flex align-items-center">
-          <div class="testimonial thick-bordered p-5">
-<!--            <object type="image/svg+xml" class="ball_t-l" data="assets/icons/ball.svg"></object>-->
+          <div class="testimonial thick-bordered p-4 p-md-5">
+            <object type="image/svg+xml" class="ball_t-l" data="assets/icons/m-coin.svg"></object>
             <object type="image/svg+xml" class="ball_b-r" data="assets/icons/ball.svg"></object>
 
             <div class="content d-flex flex-column align-items-center justify-content-center">
